--- a/wiwii/UserMasterPage.xaml
+++ b/wiwii/UserMasterPage.xaml
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="wiwii.UserMasterPage">
+<ContentPage 
+    xmlns="http://xamarin.com/schemas/2014/forms" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="wiwii.UserMasterPage" Title="☰">
     <ContentPage.Content>
+        <Grid>
+            <StackLayout Grid.Row="0" BackgroundColor="Gray"></StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
