--- a/wiwii/UserMasterPage.xaml
+++ b/wiwii/UserMasterPage.xaml
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage 
-    xmlns="http://xamarin.com/schemas/2014/forms" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="wiwii.UserMasterPage" Title="☰">
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="Wiwii.UserMasterPage" Title="☰">
     <ContentPage.Content>
         <Grid>
             <StackLayout Grid.Row="0" BackgroundColor="Gray"></StackLayout>
+            <Grid Grid.Row="1">
+                <Button Grid.Row="0" Text="Speed" Clicked="Speed_Handle_Clicked"/>
+            </Grid>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
