--- a/wiwii/AfterUserLoginPage.xaml
+++ b/wiwii/AfterUserLoginPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Shell 
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
@@ -31,5 +31,10 @@
     
     <FlyoutItem Title="Make A Test" Icon="test.png">
         <ShellContent ContentTemplate="{DataTemplate pages:WiWiiFirstPage}" />
+    </FlyoutItem>
+    
+    
+    <FlyoutItem Title="Settings" Icon="setting.png">
+        <ShellContent ContentTemplate="{DataTemplate pages:SettingsScreen}" />
     </FlyoutItem>
 </Shell>
